--- a/hyplayer.html
+++ b/hyplayer.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Koleksi Partitur Not Angka - Henri Yulianto">
 
   <title id="page-title">HY Player</title>
+  <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/index.css">
   <link rel="stylesheet" href="assets/css/menu.css">
@@ -18,12 +19,12 @@
 <body>
 
   <!-- Fixed header with BWV navigation and audio controls -->
-  <div class="fixed-top bg-light border-bottom" style="background-color: var(--bach-cream) !important;">
+  <div class="fixed-top bg-light border-bottom" style="background-color: var(--body-bgcolor) !important;">
     <!-- BWV Navigation Bar -->
 
     <!-- Header with title and audio controls -->
     <div id="header" class="py-2 container text-center" style="background-color: white;">
-      <div id="bwv-navigation" hidden="true" class="py-2" style="background-color: transparent;">
+      <div id="bwv-navigation" class="py-2" style="background-color: transparent;">
         <div id="bwv-buttons-container" class="d-flex justify-content-center gap-2" style="min-height: 31px;">
           <!-- BWV navigation buttons will be dynamically inserted here -->
           <div id="bwv-navigation-loading" class="text-muted small"><!--Loading BWV navigation...-->&nbsp;</div>
@@ -36,7 +37,8 @@
           Your browser does not support the audio element.
         </audio>
         <!-- Bar spy - positioned dynamically by JavaScript -->
-        <div id="bar_spy" class="badge rounded-pill text-bg-secondary d-flex align-items-center gap-1" style="visibility: hidden;">
+        <div id="bar_spy" class="badge rounded-pill text-bg-secondary d-flex align-items-center gap-1"
+          style="visibility: hidden;">
           <span id="current_bar">1</span>
           <span>of</span>
           <span id="total_bars">--</span>
@@ -49,10 +51,12 @@
   <div class="main-content" style="position: relative;">
 
     <!-- Bootstrap loading animation -->
-    <div id="loading" style="position: fixed; top: var(--header-height); left: 0; right: 0; bottom: 0; z-index: 1000; background-color: white; margin: 0; padding: 0;"
+    <div id="loading"
+      style="position: fixed; top: var(--header-height); left: 0; right: 0; bottom: 0; z-index: 1000; background-color: white; margin: 0; padding: 0;"
       class="d-flex align-items-center justify-content-center">
       <div class="text-center">
-        <div class="spinner-border text-primary mb-3" style="width: 4rem; height: 4rem; color: #8B4513 !important;" role="status">
+        <div class="spinner-border text-primary mb-3" style="width: 4rem; height: 4rem; color: #8B4513 !important;"
+          role="status">
           <span class="visually-hidden">Loading...</span>
         </div>
         <div class="text-muted">Loading <span id="loading-werk"></span></div>
@@ -78,9 +82,11 @@
   </div> <!-- End main-content wrapper -->
 
   <!-- Scroll-to-top button - positioned dynamically by JavaScript, auto-hides when not needed -->
-  <a id="button_scroll_to_top" type="button" class="btn btn-outline-light btn-sm d-inline-flex align-items-center justify-content-center position-fixed"
+  <a id="button_scroll_to_top" type="button"
+    class="btn btn-outline-light btn-sm d-inline-flex align-items-center justify-content-center position-fixed"
     style="bottom: 40px; right: 0; visibility: hidden; width: 28px; height: 28px; border: 1px solid var(--bach-taupe-50); z-index: 1040; background-color: var(--bach-cream);"
-    title="scroll_to_top" onclick="document.getElementById('svg-container').scrollIntoView({ behavior: 'smooth', block: 'start'}); return false;">
+    title="scroll_to_top"
+    onclick="document.getElementById('svg-container').scrollIntoView({ behavior: 'smooth', block: 'start'}); return false;">
     <img src="assets/images/up-arrow-svgrepo-com.svg" width="16" height="16" alt="scroll_up"
       style="filter: brightness(0) saturate(100%) invert(50%) sepia(5%) saturate(388%) hue-rotate(314deg) brightness(89%) contrast(87%);">
   </a>
@@ -98,7 +104,8 @@
   <body>
     <div style="height: 80vh;"></div>
 
-    <footer id="footer" class="font-monospace d-flex justify-content-between align-items-center border-top" style="font-size: 12px;">
+    <footer id="footer" class="font-monospace d-flex justify-content-between align-items-center border-top"
+      style="font-size: 12px;">
       <div class="mx-2">
         <!-- <a href="/bach-siegel.html" title="Bach Seal">
           <svg width="24" height="24" viewBox="0 0 200 200">
@@ -111,7 +118,8 @@
         <span class="fs-5">©</span>
         <span>2025</span>
         <span>Henri Yulianto</span>
-        <a href="https://github.com/henriyulianto" target="_blank" rel="noopener noreferrer" class="text-muted" title="GitHub">
+        <a href="https://github.com/henriyulianto" target="_blank" rel="noopener noreferrer" class="text-muted"
+          title="GitHub">
           <img src="assets/images/github-mark.svg" width="18" height="18" alt="GitHub" style="margin-top: -2px;">
         </a>
       </div>
