--- a/hyplayer.html
+++ b/hyplayer.html
@@ -19,18 +19,17 @@
 <body>
 
   <!-- Fixed header with BWV navigation and audio controls -->
-  <div class="fixed-top bg-light border-bottom" style="background-color: var(--body-bgcolor) !important;">
+  <div id="header-wrapper" class="fixed-top bg-light">
     <!-- BWV Navigation Bar -->
 
     <!-- Header with title and audio controls -->
-    <div id="header" class="py-2 container text-center" style="background-color: white;">
-      <div id="bwv-navigation" class="py-2" style="background-color: transparent;">
+    <div id="header" class="py-2 container text-center" style="background-color: transparent;">
+      <!-- <div id="bwv-navigation" class="py-2" style="background-color: transparent;">
         <div id="bwv-buttons-container" class="d-flex justify-content-center gap-2" style="min-height: 31px;">
-          <!-- BWV navigation buttons will be dynamically inserted here -->
-          <div id="bwv-navigation-loading" class="text-muted small"><!--Loading BWV navigation...-->&nbsp;</div>
+          <div id="bwv-navigation-loading" class="text-muted small">&nbsp;</div>
         </div>
-      </div>
-      <div class="d-flex align-items-center justify-content-center position-relative gap-2">
+      </div> -->
+      <div class="d-flex align-items-center justify-content-center position-relative gap-2" style="background-color: transparent;">
         <!-- Main audio player -->
         <audio id="audio" class="flex-grow-1 my-1" style="max-width: 52rem; max-height: 2rem;" controls>
           <source id="audio-source" src="" type="audio/wav">
@@ -104,7 +103,7 @@
   <body>
     <div style="height: 80vh;"></div>
 
-    <footer id="footer" class="font-monospace d-flex justify-content-between align-items-center border-top"
+    <footer id="footer" class="position-sticky bottom-0 start-50 font-monospace d-flex justify-content-between align-items-center border-top"
       style="font-size: 12px;">
       <div class="mx-2">
         <!-- <a href="/bach-siegel.html" title="Bach Seal">
@@ -140,8 +139,7 @@
 
   </html>
 
-  <!-- Load menu.js before index.js -->
-  <script type="module" src="assets/js/index.js"></script>
+  <script type="module" src="assets/js/hyplayer.js"></script>
 
 </body>
 
