--- a/hyplayer.html
+++ b/hyplayer.html
@@ -58,7 +58,7 @@
           role="status">
           <span class="visually-hidden">Loading...</span>
         </div>
-        <div class="text-muted">Loading <span id="loading-werk"></span></div>
+        <div class="text-muted"><!--Loading --><span id="loading-werk"></span></div>
       </div>
     </div>
 
